--- a/src/Makefile.win
+++ b/src/Makefile.win
@@ -3,10 +3,17 @@ CC=x86_64-w64-mingw32-gcc
 LDFLAGS=-pthread -L./lusb_build_win/lib -lusb-1.0
 TOPDIR=$(shell pwd)
 
+I2C_EEPROM_SUPPORT = y
+
 BIGFILES=-D_FILE_OFFSET_BITS=64
 CFLAGS=-O2 -std=gnu99 -posix -static -Wall -I./lusb_build_win/include $(BIGFILES)
 
 OBJS= flashcmd_api.o spi_controller.o spi_nand_flash.o spi_nor_flash.o ch341a_spi.o main.o
+
+ifeq ($(I2C_EEPROM_SUPPORT),y)
+CFLAGS += -DI2C_EEPROM_SUPPORT
+OBJS += ch341a_i2c.o i2c_eeprom.o
+endif
 
 all: SNANDer.exe
 
