--- a/src/Makefile.osx
+++ b/src/Makefile.osx
@@ -11,30 +11,31 @@ STRIP=$(DRW)-strip
 LDFLAGS=-pthread -lobjc -Wl,-framework,IOKit -Wl,-framework,CoreFoundation
 TOPDIR=$(shell pwd)
 
-I2C_EEPROM_SUPPORT = y
+EEPROM_SUPPORT = y
 
 BIGFILES=-D_FILE_OFFSET_BITS=64
-CFLAGS=-O2 -std=gnu99 -Wall -I./lusb_build/include $(BIGFILES)
+CFLAGS=-O2 -std=gnu99 -Wall -Wno-gnu-designator -fcommon -I./lusb_build_osx/include $(BIGFILES)
 
-U=lusb_build/libusb
-O=lusb_build/libusb/os
+U=lusb_build_osx/libusb
+O=lusb_build_osx/libusb/os
 
 OBJS = flashcmd_api.o spi_controller.o spi_nand_flash.o spi_nor_flash.o ch341a_spi.o main.o
 USB_OBJS += $(U)/libusb_1_0_la-core.o $(U)/libusb_1_0_la-descriptor.o $(U)/libusb_1_0_la-hotplug.o \
            $(U)/libusb_1_0_la-io.o $(U)/libusb_1_0_la-strerror.o $(U)/libusb_1_0_la-sync.o \
            $(O)/libusb_1_0_la-darwin_usb.o $(O)/libusb_1_0_la-poll_posix.o $(O)/libusb_1_0_la-threads_posix.o
 
-ifeq ($(I2C_EEPROM_SUPPORT),y)
-CFLAGS += -DI2C_EEPROM_SUPPORT
+ifeq ($(EEPROM_SUPPORT),y)
+CFLAGS += -DEEPROM_SUPPORT
 OBJS += ch341a_i2c.o i2c_eeprom.o
+OBJS += bitbang_microwire.o mw_eeprom.o ch341a_gpio.o
 endif
 
 all: SNANDer
 
 .lusb_install_osx:
-	mkdir -p lusb_build
-	cd lusb_build; \
-	CC=$(DRW)-gcc ../libusb-1.0.22/configure --host=$(DRW) --prefix=$(TOPDIR)/lusb_build --disable-udev; \
+	mkdir -p lusb_build_osx
+	cd lusb_build_osx; \
+	CC=$(CC) ../libusb-1.0.22/configure --host=$(DRW) --prefix=$(TOPDIR)/lusb_build_osx; \
 	make; \
 	make install
 	touch $@
@@ -48,4 +49,4 @@ SNANDer: .lusb_install_osx $(OBJS)
 
 clean: 
 	rm -f *.o SNANDer .lusb_install_osx
-	rm -rf lusb_build
+	rm -rf lusb_build_osx
