--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           DEBIAN_FRONTEND=noninteractive \
           sudo echo -e '#\nAPT::Install-Recommends "0";\nAPT::AutoRemove::RecommendsImportant "false";\n#\n' >/etc/apt/apt.conf.d/01lean && \
-          sudo apt-get -y update && sudo apt-get -y upgrade && apt -y autoremove && apt-get -y install build-essential curl
+          sudo apt-get -y update && sudo apt-get -y upgrade && sudo apt -y autoremove && sudo apt-get -y install build-essential curl
 
       - name: Free disk space
         run: |
